# pyGandalf

./: README.md  imgui.ini  pyproject.toml  setup.py
examples/: example00.py
examples/shaders/: fragment_shader_code_red.glsl
pyGandalf/core/: application.py  base_window.py  event_manager.py  events.py  input_manager.py  opengl_window.py  webgpu_window.py
pyGandalf/renderer/: base_renderer.py  imgui_renderer.py  opengl_renderer.py  webgpu_renderer.py
pyGandalf/scene/: components.py  editor_components.py  editor_manager.py  entity.py  scene.py  scene_manager.py  scene_serializer.py
pyGandalf/systems/: camera_controller_system.py  camera_system.py  editor_panel_system.py  light_system.py  link_system.py  opengl_rendering_system.py  system.py  transform_system.py  webgpu_compute_pipeline_system.py  webgpu_rendering_system.py
pyGandalf/utilities/: component_lib.py  compute_utilities.py  definitions.py  entity_presets.py  logger.py  math.py  mesh_lib.py  opengl_material_lib.py  opengl_mesh_lib.py  opengl_shader_lib.py  opengl_texture_lib.py  prt_lib.py  usd_serializer.py  usd_utilities.py  webgpu_material_lib.py  webgpu_shader_lib.py  webgpu_texture_lib.py
src/: definitions.py
src/core/: application.py  base_window.py  opengl_window.py
src/examples/: example00.py
src/renderer/: base_renderer.py  opengl_renderer.py  renderer_2d.py
src/scene/: components.py  scene.py  scene_manager.py
src/systems/: link_system.py  opengl_rendering_system.py  system.py  transform_system.py
src/utilities/: material_lib.py  shader_lib.py  (+4 more)
tests/: test_components.py  test_ecs.py  test_opengl_utility_libs.py  test_utility_libs.py  test_wgpu_utility_libs.py
(+216 files in other folders)
